Tests for Micro-Services
Wrote tests for all Micro-Services. Added rest template configuration